stater page added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="vhs"> 
+<a href="vhs.html">view high score</a>
+  </div>
+  <div class="time">
+Remaining time:
+<span id="time">timer not started</span>
+  </div>
     <script src="script.js"></script>
 </body>
 </html>
