adding start page

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>code quiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="vhs"> 
-<a href="vhs.html">view high score</a>
-  </div>
-  <div class="time">
-Remaining time:
-<span id="time">timer not started</span>
-  </div>
+    <div class="vhs">
+        <a href="vhs.html">view high score</a>
+    </div>
+    <div class="time">
+        Remaining time:
+        <span id="time">timer not started</span>
+    </div>
+
+    <div class="main">
+        <div id="start-page" class=" start-page">
+
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
