adding start page-1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <div class="main">
         <div id="start-page" class=" start-page">
-
+<h1>subedi quiz challange</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, obcaecati! Reiciendis doloribus nostrum nulla explicabo nisi eaque dicta sunt vel ipsa doloremque error voluptatibus similique repellat, consequatur harum veritatis vero.</p>
         </div>
     </div>
     <script src="script.js"></script>
