added question h2 in indexhtml

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 nostrum nulla explicabo nisi eaque dicta sunt vel ipsa doloremque error voluptatibus similique repellat,
                 consequatur harum veritatis vero.</p>
 
-                <button id="start-btn">Start Quiz</button>
+            <button id="start-btn">Start Quiz</button>
+        </div>
+        <div id="questions-page" class='questions-page hide-me'>
+            <h2 id="question">current question here</h2>
+            <div id="answers" class="answers"></div>
         </div>
     </div>
     <script src="script.js"></script>
