--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="main">
         <div id="start-page" class=" start-page">
             <h1>subedi quiz challange</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, obcaecati! Reiciendis doloribus
+            <p>try to start quizLorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, obcaecati! Reiciendis doloribus
                 nostrum nulla explicabo nisi eaque dicta sunt vel ipsa doloremque error voluptatibus similique repellat,
                 consequatur harum veritatis vero.</p>
 
