changes to index.htmlfor giving feedback

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2 id="question">current question here</h2>
             <div id="answers" class="answers"></div>
         </div>
+        <div id="feedback-div" class='feedback-div hide-me'></div>
     </div>
     <script src="script.js"></script>
 </body>
