added end div for index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="main">
         <div id="start-page" class=" start-page">
             <h1>subedi quiz challange</h1>
-            <p>try to start quizLorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, obcaecati! Reiciendis doloribus
+            <p>try to start quizLorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, obcaecati! Reiciendis
+                doloribus
                 nostrum nulla explicabo nisi eaque dicta sunt vel ipsa doloremque error voluptatibus similique repellat,
                 consequatur harum veritatis vero.</p>
 
@@ -31,6 +32,14 @@
             <div id="answers" class="answers"></div>
         </div>
         <div id="feedback-div" class='feedback-div hide-me'></div>
+        <div id="end-page" class='end-page hide-me'>
+            <h2>Quiz Ended</h2>
+<p>your final score is <span id="your-score"></span> </p>
+<p>
+    your initials: <input type="text" id="your-initals" max="3">
+    <button id="initials-btn">Submit</button>
+</p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
